ARTEMIS-3304: replace use of deprecated constructors marked as for-removal since Java 16
updates all the uses in tests, missed in original commit